try to fix on mobile

--- a/master.css
+++ b/master.css
@@ -1,4 +1,8 @@
 html {
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  min-width: 100%;
   padding: 0;
   margin: 0;
   background: url(img/water.jpg) no-repeat center center fixed; 
@@ -9,6 +13,8 @@ html {
 }
 
 body {
+  min-height: 100%;
+  min-width: 100%;
   padding: 0;
   margin: 0;
 }
